# cpp_for_nobody

./: .clang-format  CMakeLists.txt  README.md
algorithms_and_structures/: CMakeLists.txt
algorithms_and_structures/algorithm/: CMakeLists.txt  algorithm.h
algorithms_and_structures/algorithm/graph/: CMakeLists.txt  dfs.h
algorithms_and_structures/algorithm/graph/detail/: dfs.h  type_traits.h
algorithms_and_structures/algorithm/sort/: CMakeLists.txt  bubble_sort.h  counting_sort.h  heap_sort.h  insertion_sort.h  merge_sort.h  quick_sort.h  radix_sort.h  selection_sort.h  sort.h
algorithms_and_structures/algorithm/sort/detail/: type_traits.h
algorithms_and_structures/include/: CMakeLists.txt  predicates.h  print.h  type_traits.h
algorithms_and_structures/structure/: CMakeLists.txt  structure.h
algorithms_and_structures/structure/binary_tree/: CMakeLists.txt  binary_tree.h
algorithms_and_structures/structure/binary_tree/detail/: algorithm.h  node.h  type_traits.h
algorithms_and_structures/structure/deque/detail/: iterator.h  type_traits.h
cmake/: StrictFlags.cmake  Test.cmake
design_patterns/: CMakeLists.txt
design_patterns/behavioral/: CMakeLists.txt  behavioral.h  chain_of_responsibility.h  command.h  iterator.h  mediator.h  memento.h  observer.h  state.h  strategy.h  template_method.h  visitor.h
design_patterns/creational/: CMakeLists.txt  abstract_factory.h  builder.h  builder_function.h  creational.h  factory_method.h  prototype.h  singleton.h
design_patterns/structural/: CMakeLists.txt  adapter.h  bridge.h  composite.h  decorator.h  facade.h  flyweight.h  proxy.h  structural.h
documentation/notes/: generate.py  main.tex
documentation/notes/Chapters/: Bibliography.tex  Concurrency.tex  Cpp11.tex  Cpp14.tex  Cpp17.tex  Miscellaneous.tex  MoveSemantics.tex  Preface.tex
documentation/notes/Covers/: CoverPage.tex
documentation/notes/Headers/Macros/: Statements.tex
documentation/notes/Headers/Preambles/: Preamble.tex
test/: CMakeLists.txt
test/algorithms_and_structures/: CMakeLists.txt  binary_tree_test.cpp  sorting_test.cpp
test/design_patterns/: CMakeLists.txt  behavioral_test.cpp  creational_test.cpp  structural_test.cpp
